--- a/src/main/resources/templates/UserPages/SecurityGroupList.html
+++ b/src/main/resources/templates/UserPages/SecurityGroupList.html
@@ -697,7 +697,7 @@
         <!-- Contenido principal -->
         <main class="main-content">
             <!-- Header -->
-            <div th:replace="~{Fragments/User/header :: header(title='Security Groups')}"></div>
+            <div th:replace="~{Fragments/User/header :: header(title='Security Group')}"></div>
 
             <section class="page-content">
                 <div class="content-header mb-0">
