--- a/src/main/resources/templates/Fragments/User/sidebar.html
+++ b/src/main/resources/templates/Fragments/User/sidebar.html
@@ -40,7 +40,7 @@
         <li>
             <a th:href="@{/User/securityGroup}" th:classappend="${activeMenu == 'securityGroup' ? 'active' : ''}" data-section="securityGroup">
                 <i class="fas fa-shield-halved"></i>
-                <span>Security Groups</span>
+                <span>Security Group</span>
             </a>
         </li>
     </ul>
