--- a/src/main/resources/templates/UserPages/RuleList.html
+++ b/src/main/resources/templates/UserPages/RuleList.html
@@ -750,13 +750,13 @@
         <!-- Contenido principal -->
         <main class="main-content">
             <!-- Header -->
-            <div th:replace="~{Fragments/User/header :: header(title='Security Groups')}"></div>
+            <div th:replace="~{Fragments/User/header :: header(title='Security Group')}"></div>
 
             <section class="page-content">
                 <div class="content-header mb-0 d-flex align-items-center justify-content-between">
                     <div>
                         <h2 class="content-title text-3xl text-start font-weight-bolder mb-2 animate__animated animate__zoomInLeft animate__slow" style="font-weight: 900">
-                            MIS REGLAS
+                            MIS REGLAs
                         </h2>
 
                         <div class="row align-items-center mb-2">
@@ -922,6 +922,7 @@
                                     <span class="badge bg-info" style="font-size:1.1em;">CONSIDERACIONES</span>
                                 </div>
                                 <ul class="mb-0 ps-3">
+                                    <li><b>ETHER TYPE:</b> Elige si la regla debe asociarse al protocolo IPv4 o IPv6.</li>
                                     <li><b>TCP/UDP:</b> Usa los campos de puerto. Puedes definir un único puerto o un rango.</li>
                                     <li><b>ICMP/ALL:</b> Los campos de puerto no se usan.</li>
                                     <li><b>Remote CIDR:</b> Especifica el rango de IPs remotas permitidas.</li>
