--- a/src/main/resources/templates/Fragments/Admin/sidebar.html
+++ b/src/main/resources/templates/Fragments/Admin/sidebar.html
@@ -27,7 +27,7 @@
         <li>
             <a th:href="@{/Admin/users}" th:classappend="${activeMenu == 'users' ? 'active' : ''}" data-section="users">
                 <i class="fas fa-users"></i>
-                <span>Usuarios</span>
+                <span>Zonas de Disponibilidad</span>
             </a>
         </li>
         <li>
